--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.g59_find_home">
+    package="com.academia.g59_find_home">
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="g59_find_home"
         android:name="${applicationName}"
