--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   flutter_svg: ^1.0.3
   flutter_screenutil: ^5.5.2
-
+  card_swiper: ^2.0.3
+  firebase_core: ^1.17.0
+  firebase_messaging: ^11.4.0
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
